fix(Recovery): better contrast for dark button on hover

--- a/assets/css/elements/_buttons.scss
+++ b/assets/css/elements/_buttons.scss
@@ -98,6 +98,9 @@ button[disabled] {
   background: #454545;
   color: white;
   &:hover {
-    color: darken(#454545, 70%);
+    color: darken(white, 20%) !important;
+  }
+  &:visited {
+    color: white;
   }
 }
